# Quran-Video-Generation

./: .gitignore  README.md  pyproject.toml
src/: main.py  network_requests.py  text.py
src-data/: main.py
